get stream by game id
