# routes/stream.route.js
@@ -4,6 +4,7 @@ const streamController = require('../controllers/stream.controller');
 
 router.get('/', streamController.getAllStreams);
 router.get('/:id', streamController.getStreamById);
+router.get('/game/:gameId', streamController.getStreamsByGameId);
 router.post('/', streamController.createStream);
 router.put('/:id', streamController.updateStream);
 router.delete('/:id', streamController.deleteStream);
